--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,11 +10,11 @@
     <meta property="og:site_name" content="Portfolio Website">
     <meta property="og:title" content="Developer | Tech Enthusiast" />
     <meta property="og:description"
-        content="Hello there 👋🏻, I am Akansha Madavi, a Computer Engineering student 👩🏻‍💻📚. I am eager to hear about potential career opportunities, so I would be pleased to chat about job openings in the engineering sphere. Send 'help' to know more about me." />
-    <meta property="og:image" itemprop="image" content="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg">
+        content="Hello there 👋🏻, I am Akansha Madavi, a Computer Science and Engineering student 👩🏻‍💻📚. I am eager to hear about potential career opportunities, so I would be pleased to chat about job openings in the engineering sphere. Send 'help' to know more about me." />
+    <meta property="og:image" itemprop="image" content="C:\Users\Akansha Madavi\Desktop\PROJECTS\CHATBOT_FRONTEND\images\dp.jpg">
     <meta property="og:type" content="website" />
 
-    <link itemprop="thumbnailUrl" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg">
+    <link itemprop="thumbnailUrl" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg?raw=true">
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="300">
@@ -28,14 +26,14 @@
 
 <body onload="startFunction()">
 
-    <link itemprop="thumbnailUrl" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg">
+    <link itemprop="thumbnailUrl" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg?raw=true">
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-        <link itemprop="url" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg">
+        <link itemprop="url" href="https://github.com/Akansha143/CHATBOT/blob/main/images/dp.jpeg?raw=true">
     </span>
 
     <nav>
         <div class="navbar">
-            <img class="dpimg" onclick="openFullScreenDP()" src="https://github.com/Akansha143/CHATBOT/blob/main/images/squaredp.jpeg" alt="">
+            <img class="dpimg" onclick="openFullScreenDP()" src="https://github.com/Akansha143/CHATBOT/blob/main/images/squaredp.jpeg?raw=true" alt="">
             <div class="personalInfo">
                 <label id="name">Akansha Madavi</label>
                 <label id="lastseen">last seen today at 3:24 pm</label>
@@ -46,7 +44,7 @@
     <div class="scrollable" id="myScrollable">
         <div class="fullScreenDP" id="fullScreenDP">
             <div class="insideDP">
-                <img class="dp" src="https://github.com/Akansha143/CHATBOT/blob/main/images/squaredp.jpeg" alt="">
+                <img class="dp" src= "https://github.com/Akansha143/CHATBOT/blob/main/images/squaredp.jpeg?raw=true" alt="">
                 <svg class="closeBTN" onclick="closeFullDP()" xmlns="http://www.w3.org/2000/svg" width="64px"
                     viewBox="0 0 512 512" height="64px">
                     <path class="btnColor" fill="#E04F5F"
